Fixed some bugs in IE11 with the nav and last section of the page showing too much space.  The nav items were all squished in ie as well.

--- a/themes/northeastern/__PRECOMP/sass/partials/nav.scss
+++ b/themes/northeastern/__PRECOMP/sass/partials/nav.scss
@@ -21,7 +21,7 @@ nav.mainnav{
     list-style: none;
     list-style-type: none;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     height: 100%;
     align-items: center;
     flex-direction: row;
@@ -203,7 +203,7 @@ nav.mainnav{
       padding:2px 0 0 0;
       float:left;
     }
-  
+
   }
   &:hover, &:focus {
     border: 1px solid rgba($brand_colors-white,1.0);
