--- a/themes/northeastern/__PRECOMP/sass/partials/wrapper.scss
+++ b/themes/northeastern/__PRECOMP/sass/partials/wrapper.scss
@@ -6,7 +6,7 @@
 
 .wrapper{
   max-width: $wrapper-width;
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   height: 100%;
 }
